zebra-rpc/src/methods/tests/snapshots/get_address_balance@mainnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 192
expression: address_balance
---
{
  "balance": 687500
}
