zebra-rpc/src/methods/tests/snapshots/get_address_tx_ids@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
assertion_line: 227
expression: transactions
---
[
  "f37e9f691fffb635de0999491d906ee85ba40cd36dae9f6e5911a8277d7c5f75",
  "5822c0532da8a008259ac39933d3210e508c17e3ba21d2b2c428785efdccb3d5",
  "4a3bf3f814a3aef93423890c8afa9709229aaf3daf4da98c70d810253d3b9550",
  "3373ed6deb1130f310d8788db5dfdb92e52980b34ca02ea124ced11aa247f80b",
  "476480f7c2580a9e39b9d78892fea996c389e6627c8962700563c19b68cc7bee",
  "23daf8408d825feb09dfeaaceccf1307ed1008265c7145573374872b332c57ab",
  "47aebd007159819c19519a31bb87b8b40b9b09701fcc0e40bc61c98d283117f2",
  "29f8982be208c9d8737200f0ecfd3f42c175b7dd67a0aba85812283fc443a443",
  "9eec40dcf5f72aa0619472cbc3c336229fce2ff983b47ebccc7bf8800759781c",
  "3887181b326c25e1ea1b6885c9b437280ca3372dc5b67af72423c88c18a1da2e"
]
