zebra-rpc/src/methods/tests/snapshots/get_address_tx_ids_invalid_end_greater_start@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: transactions
---
{
  "Err": {
    "code": -32602,
    "message": "start Height(2) must be less than or equal to end Height(1)"
  }
}
