zebra-rpc/src/methods/tests/snapshots/get_address_tx_ids_invalid_excessive_start@testnet_10.snap
---
source: zebra-rpc/src/methods/tests/snapshot.rs
expression: transactions
---
{
  "Err": {
    "code": -32602,
    "message": "start Height(16777216) and end Height(16777217) must both be less than or equal to the chain tip Height(10)"
  }
}
